[package]
edition = "2021"
name = "node-toml"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.1.0", default-features = false, features = ["napi4", "serde-json", "tokio_rt" ] }
napi-derive = "2.1.0"
serde-transcode = "1.1.0"
serde_json = "1.0.40"
toml = "0.5.3"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
